# gen/go/routers.go
@@ -1,0 +1,137 @@
+/*
+ * Test API
+ *
+ * Test API for codegen
+ *
+ * API version: 2.0.0
+ * Contact: none
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Route is the information for every URI.
+type Route struct {
+	// Name is the name of this Route.
+	Name        string
+	// Method is the string for the HTTP method. ex) GET, POST etc..
+	Method      string
+	// Pattern is the pattern of the URI.
+	Pattern     string
+	// HandlerFunc is the handler function of this route.
+	HandlerFunc gin.HandlerFunc
+}
+
+// Routes is the list of the generated Route.
+type Routes []Route
+
+// NewRouter returns a new router.
+func NewRouter() *gin.Engine {
+	router := gin.Default()
+	for _, route := range routes {
+		switch route.Method {
+		case http.MethodGet:
+			router.GET(route.Pattern, route.HandlerFunc)
+		case http.MethodPost:
+			router.POST(route.Pattern, route.HandlerFunc)
+		case http.MethodPut:
+			router.PUT(route.Pattern, route.HandlerFunc)
+		case http.MethodPatch:
+			router.PATCH(route.Pattern, route.HandlerFunc)
+		case http.MethodDelete:
+			router.DELETE(route.Pattern, route.HandlerFunc)
+		}
+	}
+
+	return router
+}
+
+// Index is the index handler.
+func Index(c *gin.Context) {
+	c.String(http.StatusOK, "Hello World!")
+}
+
+var routes = Routes{
+	{
+		"Index",
+		http.MethodGet,
+		"/",
+		Index,
+	},
+
+	{
+		"BarGet",
+		http.MethodGet,
+		"/bar",
+		BarGet,
+	},
+
+	{
+		"BarIdDelete",
+		http.MethodDelete,
+		"/bar/:id",
+		BarIdDelete,
+	},
+
+	{
+		"BarIdGet",
+		http.MethodGet,
+		"/bar/:id",
+		BarIdGet,
+	},
+
+	{
+		"BarIdPatch",
+		http.MethodPatch,
+		"/bar/:id",
+		BarIdPatch,
+	},
+
+	{
+		"BarPost",
+		http.MethodPost,
+		"/bar",
+		BarPost,
+	},
+
+	{
+		"FooGet",
+		http.MethodGet,
+		"/foo",
+		FooGet,
+	},
+
+	{
+		"FooIdDelete",
+		http.MethodDelete,
+		"/foo/:id",
+		FooIdDelete,
+	},
+
+	{
+		"FooIdGet",
+		http.MethodGet,
+		"/foo/:id",
+		FooIdGet,
+	},
+
+	{
+		"FooIdPatch",
+		http.MethodPatch,
+		"/foo/:id",
+		FooIdPatch,
+	},
+
+	{
+		"FooPost",
+		http.MethodPost,
+		"/foo",
+		FooPost,
+	},
+}
