# internal/docs/swagger.yaml
@@ -1,3 +1,10 @@
+info:
+    version: "2.0.0"
+    title: "Test API"
+    description: Test API for codegen
+    contact:
+        name: none
+        email: none
 definitions:
   bar.Bar:
     properties:
@@ -23,8 +30,6 @@ definitions:
           $ref: '#/definitions/foo.Foo'
         type: array
     type: object
-info:
-  contact: {}
 paths:
   /bar:
     get:
